# LIRS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  lirs  lirs.cpp  lirs.hpp  perfect_cache.hpp
include/: lirs.hpp  perfect_cache.hpp
tests/: CMakeLists.txt
tests/end2end/: lirs_results.txt  perfect_cache_results.txt  test.txt  test0.txt  tester.py  testgen.py
tests/src/: CMakeLists.txt  lirs.cpp  perfect_cache.cpp
